--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Mi primer sito</title>
 </head>
 <body>
-    <h1>Shmebulock pro player warzone2</h1>
+    <h1>no Shmebulock pro player warzone2</h1>
 </body>
 </html>
